bundled tests into testsuites

--- a/build.gradle
+++ b/build.gradle
@@ -59,20 +59,18 @@ dependencies {
 }
 
 test {
-    filter {
-        includeTestsMatching "org.wahlzeit.*"
-    }
-    testLogging {
-            events "passed", "skipped", "failed"
+	include "org/wahlzeit/AllTests.class"
+	testLogging {
+		events "passed", "skipped", "failed"
 
-            afterSuite { desc, result ->
-                if (!desc.parent) {
-                    println "Tests run: ${result.testCount}, " +
-                            "Failures: ${result.failedTestCount}, " +
-                            "Skipped: ${result.skippedTestCount}"
-                }
-            }
-        }
+			afterSuite { desc, result ->
+				if (!desc.parent) {
+					println "Tests run: ${result.testCount}, " +
+						"Failures: ${result.failedTestCount}, " +
+						"Skipped: ${result.skippedTestCount}"
+				}
+			}
+	}
 }
 
 appengine {
